force-app/main/default/objects/Account/fields/AE_Owner__c.field-meta.xml
<CustomField>
    <fullName>AE_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AE Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>