force-app/main/default/objects/Account/fields/Approx_Census__c.field-meta.xml
<CustomField>
    <fullName>Approx_Census__c</fullName>
    <label>Approx. Census</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>