force-app/main/default/objects/Account/fields/Billing_Software__c.field-meta.xml
<CustomField>
    <fullName>Billing_Software__c</fullName>
    <label>Billing Software</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CMD</fullName>
            </value>
            <value>
                <fullName>Advanced MD</fullName>
            </value>
            <value>
                <fullName>Avea</fullName>
            </value>
            <value>
                <fullName>External</fullName>
            </value>
            <value>
                <fullName>Alleva</fullName>
            </value>
            <value>
                <fullName>Lightning Step</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>