force-app/main/default/objects/Account/fields/CB_Customer_ID__c.field-meta.xml
<CustomField>
    <fullName>CB_Customer_ID__c</fullName>
    <label>CB Customer ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>