force-app/main/default/objects/Account/fields/Current_CRM__c.field-meta.xml
<CustomField>
    <fullName>Current_CRM__c</fullName>
    <label>Current CRM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>KIPu CRM</fullName>
            </value>
            <value>
                <fullName>Alleva CRM</fullName>
            </value>
            <value>
                <fullName>ZoHo</fullName>
            </value>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>Lightning Step CRM</fullName>
            </value>
            <value>
                <fullName>Sunwave CRM</fullName>
            </value>
            <value>
                <fullName>Mondays</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Dazos CRM</fullName>
            </value>
            <value>
                <fullName>Alleva CRM+</fullName>
            </value>
            <value>
                <fullName>Spreadsheets/None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>