force-app/main/default/objects/Account/fields/Current_EMR__c.field-meta.xml
<CustomField>
    <fullName>Current_EMR__c</fullName>
    <label>Current EMR</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alleva EMR</fullName>
            </value>
            <value>
                <fullName>KIPu</fullName>
            </value>
            <value>
                <fullName>Lightning Step</fullName>
            </value>
            <value>
                <fullName>Sunwave</fullName>
            </value>
            <value>
                <fullName>Opus</fullName>
            </value>
            <value>
                <fullName>Medical Mime</fullName>
            </value>
            <value>
                <fullName>ZenCharts</fullName>
            </value>
            <value>
                <fullName>BestNotes</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Unknown or No EMR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>