force-app/main/default/objects/Account/fields/Current_VOIP__c.field-meta.xml
<CustomField>
    <fullName>Current_VOIP__c</fullName>
    <label>Current VOIP</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CTM</fullName>
            </value>
            <value>
                <fullName>Call Rail</fullName>
            </value>
            <value>
                <fullName>5nine</fullName>
            </value>
            <value>
                <fullName>8x8</fullName>
            </value>
            <value>
                <fullName>Dial PAD</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Ring Central</fullName>
            </value>
            <value>
                <fullName>SpruceHealth</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>