force-app/main/default/objects/Account/fields/Dazos_CRM_ID__c.field-meta.xml
<CustomField>
    <fullName>Dazos_CRM_ID__c</fullName>
    <label>Dazos CRM ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>