force-app/main/default/objects/Account/fields/Implementation_Rep__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Implementation Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>