force-app/main/default/objects/Account/fields/Instance_URL__c.field-meta.xml
<CustomField>
    <fullName>Instance_URL__c</fullName>
    <label>Instance URL</label>
    <type>Url</type>
</CustomField>