force-app/main/default/objects/Account/fields/Kipu_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Kipu_Account_ID__c</fullName>
    <label>Kipu Account ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>