force-app/main/default/objects/Account/fields/Lifecycle_Stage__c.field-meta.xml
<CustomField>
    <fullName>Lifecycle_Stage__c</fullName>
    <label>Lifecycle Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Disqualified</fullName>
            </value>
            <value>
                <fullName>Nurture</fullName>
            </value>
            <value>
                <fullName>Lead</fullName>
            </value>
            <value>
                <fullName>MQL</fullName>
            </value>
            <value>
                <fullName>Opportunity</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Lost in Sales</fullName>
            </value>
            <value>
                <fullName>Churned</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>