force-app/main/default/objects/Account/fields/Sales_Development_Rep__c.field-meta.xml
<CustomField>
    <fullName>Sales_Development_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Development Rep</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>$UserRole.Name</field>
            <operation>equals</operation>
            <value>ADR</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>SDR_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>