force-app/main/default/objects/Account/listViews/Sabrina_s_CS_Accounts.listView-meta.xml
<ListView>
    <fullName>Sabrina_s_CS_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.SITE</columns>
    <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Customer_Success_Manager__c</field>
        <operation>equals</operation>
        <value>Sabrina Cummings</value>
    </filters>
    <label>Sabrina&apos;s CS Accounts</label>
</ListView>